# qt-learn

./: .gitignore  C++新人第一周学习清单.md  CMakeLists.txt  CMakeLists.txt.tmp.50436.0015b3275092  CameraManager.h  DesktopCapturer.h  FFmpegStreamer.h  FrameProfiler.h  GPU合成推流方案.md  GlCompositor.cpp  GlCompositor.h  ICompositorLayer.h  L2dLayer.cpp  L2dLayer.h  L2dModel.cpp  L2dModel.h  L2dRenderer.cpp  L2dRenderer.h  Live2DAllocator.h  Live2D接入主合成方案B改造说明.md  Live2D模型加载类设计.md  OffscreenTarget.h  PoseBus.h  PoseFrameClient.cpp  PoseFrameClient.h  PoseTypes.h  Vulkan替换OpenGL渲染方案.md  Vulkan路线B裸Vulkan完整实现.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shader.qrc  widget.cpp  widget.hpp  新人入门指南.md  方案C-OpenGL合成推流.md  本地合成推流方案.md  窗口关闭崩溃修复说明.md  自编码推流不依赖FFmpeg完整实现.md  (+1 more)
.github/workflows/: build.yml
Live2D/: Live2DModel.cpp  Live2DModel.h  Live2DRenderer.cpp  Live2DRenderer.h  Live2DWidget.cpp  Live2DWidget.h  main_live2d.cpp  动作播放修改指南.md
Shader/: composite.frag  composite.vert  composite_nv12.frag
tools/pose_sidecar/: README.md  pose_server.py  requirements.txt
